--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    namespace "com.brenoitalo.ipancommerce"
+    namespace "com.brenoitalo.agendai"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion "25.2.9519653"
 
@@ -60,12 +60,12 @@ android {
         dev {
             dimension "flavorDimension"
             applicationIdSuffix ".dev"
-            resValue "string", "app_name", "Ipancommerce [DEV]"
+            resValue "string", "app_name", "Agendaí [DEV]"
             versionNameSuffix ".dev"
         }
         prod {
             dimension "flavorDimension"
-            resValue "string", "app_name", "Ipancommerce"
+            resValue "string", "app_name", "Agendaí"
         }
     }
     
