--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,11 +9,11 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.brenoitalo.ipancommerce</string>
+	<string>com.brenoitalo.agendai</string>
 	<key>PROJECT_ID</key>
-	<string>ipancommerce</string>
+	<string>agendai</string>
 	<key>STORAGE_BUCKET</key>
-	<string>ipancommerce.appspot.com</string>
+	<string>agendai.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
