--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ipancommerce
+name: agendai
 description: This is a scheduling app.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -51,6 +51,13 @@ dependencies:
   rive: ^0.11.14
   package_info_plus: ^4.1.0
   flutter_secure_storage: ^8.0.0
+  flutter_svg:
+  iconly: ^1.0.1
+  smooth_page_indicator: ^1.1.0
+  device_preview: ^1.1.0
+  geolocator: ^10.0.0
+  url_launcher:
+  store_redirect: ^2.0.1
 
 dev_dependencies:
   bloc_test: ^9.1.3
@@ -77,7 +84,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/rive/logo_entering.riv
+    - assets/rive/
+    - assets/brand/
+    - assets/img/
+    - assets/icons/
+    - assets/icons/social/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
