--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   geolocator: ^10.0.0
   url_launcher:
   store_redirect: ^2.0.1
+  brasil_fields:
+  formz: ^0.6.0
+  email_validator: ^2.1.16
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   bloc_test: ^9.1.3
