--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   formz: ^0.6.0
   email_validator: ^2.1.16
   loading_animation_widget: ^1.2.0+4
+  shimmer: ^3.0.0
+  intl:
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   bloc_test: ^9.1.3
